hard-gists/e522b44a1dc7d3a388d4386d416747f5/run.log
=== Docker Run Log for e522b44a1dc7d3a388d4386d416747f5 ===
Started at: Mi 29. Okt 20:44:51 CET 2025

[2025-10-29 20:44:52] START: Running container for e522b44a1dc7d3a388d4386d416747f5
[2025-10-29 20:44:52] SUCCESS: Container c6692c5e28609bfe59553afd79dc9764f59dbacc22374b31a1b2ccc9212aa65f started for e522b44a1dc7d3a388d4386d416747f5
=== Container logs for e522b44a1dc7d3a388d4386d416747f5 ===
  File "/snippet.py", line 45
    print 'Loading', filepath, 'to', model.name
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e522b44a1dc7d3a388d4386d416747f5 ===
[2025-10-29 20:44:54] INFO: Container c6692c5e28609bfe59553afd79dc9764f59dbacc22374b31a1b2ccc9212aa65f has stopped
